# Officehoursq

./: .cursorrules  .gitignore  OfficeHoursQ_PRD.md  README.md  SETUP_IMPLEMENTATION_LOG.md  SETUP_LOG.md  package-lock.json  package.json  sprint1.md
client/: .env.example  eslint.config.mjs  lint_output.txt  package-lock.json  package.json  tailwind.config.ts
docs/: sprint1-plan.md  sprint1-retro.md  sprint2-plan.md  sprint2-retro.md
e2e/: package.json  playwright.config.ts
project_memory/: Issue_11_TA_Queue_UI_Progress.md  (+7 more)
server/: .coveragerc  .env.example  pyproject.toml  pytest.ini  requirements.txt
server/app/: __init__.py  auth.py  config.py  main.py  supabase_client.py
server/app/api/routes/: analytics.py  auth.py  courses.py  health.py  knowledge_base.py  questions.py  sessions.py
server/app/core/: config.py  deps.py  security.py
server/app/routers/: health.py
server/app/schemas/: analytics.py  auth.py  common.py  courses.py  knowledge_base.py  notifications.py  questions.py  sessions.py
server/app/utils/: queue_metrics.py  realtime_broadcast.py
server/db_migrations/: seed_cs5432_ai_assisted_coding.sql  seed_cs5432_au_assisted_coding_rewritten.sql
server/db_migrations/migrations/: 001_initial_schema.sql  002_core_sprint1_schema.sql  003_add_unresolved_status.sql  004_knowledge_base_search.sql
server/supabase/migrations/: 001_initial_schema.sql  002_core_sprint1_schema.sql
server/tests/: conftest.py  test_analytics.py  test_auth.py  test_courses.py  test_knowledge_base.py  test_questions.py  test_queue_metrics.py  test_sessions.py
(+35 files in other folders)
